PWA-791 - fix schedule date sizes for multiple dates on small screens

--- a/client/app/shared/styles/responsive/1024.scss
+++ b/client/app/shared/styles/responsive/1024.scss
@@ -24,4 +24,13 @@ html {
         width: calc(100% - 334px);
       }
   }
+
+
+  // events schedule form
+  .event-schedule-form {
+    .datepicker-wrapper {
+      width: 140px;
+    }
+  }
+
 }
